完成添加备注

--- a/templates/query.html
+++ b/templates/query.html
@@ -50,7 +50,7 @@
             <div class="row">
 
                 <div class="register span6">
-                    <form action="" method="post">
+                    <form action="/query" method="post">
                         <h2>签到信息查询</h2>
                         <label for="firstname">姓 名</label>
                         <input type="text" id="firstname" name="name" placeholder="请输入您的姓名...">
