--- a/templates/register.html
+++ b/templates/register.html
@@ -56,7 +56,7 @@
                         <input type="text" id="name" name="name" placeholder="请输入您的姓名...">
 {#                        <label for="mac">MAC地址&nbsp&nbsp&nbsp(例如:1a-8g-e5-bb-fe-ew)</label>#}
 {#                        <input type="text" id="mac" name="mac" placeholder="请输入您的MAC地址...">#}
-                        <label for="class_number">班级&nbsp&nbsp&nbsp(例如:21)</label>
+                        <label for="class_number">班级&nbsp&nbsp&nbsp(例如:1718021)</label>
                         <input type="text" id="class_number" name="class_number" placeholder="请输入您的班级...">
                         <label for="student_id">学号&nbsp&nbsp&nbsp(例如:15180110000)</label>
                         <input type="text" id="student_id" name="student_id" placeholder="请输入您的学号...">
